--- a/.github/workflows/safebank-infra.yml
+++ b/.github/workflows/safebank-infra.yml
@@ -72,7 +72,7 @@ jobs:
         resourceGroupName: ${{ env.RESOURCE_GROUP_DEV }}
         template: ./main.bicep
         parameters: >
-          ./parameters/dev.bicepparam #appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }}
+          ./parameters/dev.bicepparam 
           slackWebHookUrl=${{ secrets.SLACKWEBHOOKURL }}
         deploymentName: ${{ env.USER_ALIAS }}-dev
       
@@ -107,7 +107,7 @@ jobs:
   #       resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
   #       template: ./main.bicep
   #       parameters: >
-  #         ./parameters/uat.bicepparam #appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }}
+  #         ./parameters/uat.bicepparam 
   #         slackWebHookUrl=${{ secrets.SLACKWEBHOOKURL }}
   #       deploymentName: ${{ env.USER_ALIAS }}-uat
 
@@ -142,6 +142,6 @@ jobs:
   #       resourceGroupName: ${{ env.RESOURCE_GROUP_PROD }}
   #       template: ./main.bicep
   #       parameters: >
-  #           ./parameters/uat.bicepparam #appServiceAPIEnvVarDBPASS=${{ secrets.DBPASS }} appServiceAPIDBHostDBUSER=${{ secrets.DBUSER }}
+  #           ./parameters/uat.bicepparam 
   #           slackWebHookUrl=${{ secrets.SLACKWEBHOOKURL }}
   #       deploymentName: ${{ env.USER_ALIAS }}-prod
