safe secret for admin sql login

--- a/.github/workflows/safebank-infra.yml
+++ b/.github/workflows/safebank-infra.yml
@@ -74,6 +74,8 @@ jobs:
         parameters: >
           ./parameters/dev.bicepparam 
           slackWebhookUrl=${{ secrets.SLACKWEBHOOKURL }}
+          adminLogin=${{ secrets.SQL_ADMIN_LOGIN }}
+          adminLoginPass=${{ secrets.SQL_ADMIN_PASSWORD }}
         deploymentName: ${{ env.USER_ALIAS }}-dev
       
 
