--- a/.github/workflows/safebank-infra.yml
+++ b/.github/workflows/safebank-infra.yml
@@ -79,75 +79,75 @@ jobs:
         deploymentName: ${{ env.USER_ALIAS }}-dev
       
 
-  # deploy-uat:
-  #   if: (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main') || (github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   environment:
-  #     name: 'UAT'
+  deploy-uat:
+    # if: (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main') || (github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'UAT'
 
-  #   steps:
+    steps:
 
-  #     # Checkout code
-  #   - uses: actions/checkout@main
+      # Checkout code
+    - uses: actions/checkout@main
   
-  #   - name: Download Bicep build artifact
-  #     uses: actions/download-artifact@v3
-  #     with:
-  #         name: bicep-build
+    - name: Download Bicep build artifact
+      uses: actions/download-artifact@v3
+      with:
+          name: bicep-build
     
-  #     # Log into Azure
-  #   - uses: azure/login@v2
-  #     with:
-  #       creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # Log into Azure
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
         
-  #     # Deploy Bicep file
-  #   - name: Deploy UAT
-  #     uses: azure/arm-deploy@v2
-  #     with:
-  #       subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
-  #       resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
-  #       template: ./main.bicep
-  #       parameters: >
-  #         ./parameters/uat.bicepparam 
-  #         slackWebhookUrl=${{ secrets.SLACKWEBHOOKURL }}
-  #         adminLogin=${{ secrets.SQL_ADMIN_LOGIN }}
-  #         adminLoginPass=${{ secrets.SQL_ADMIN_PASSWORD }}
-  #       deploymentName: ${{ env.USER_ALIAS }}-uat
+      # Deploy Bicep file
+    - name: Deploy UAT
+      uses: azure/arm-deploy@v2
+      with:
+        subscriptionId: ${{ env.SUBSCRIPTION_ID_UAT }}
+        resourceGroupName: ${{ env.RESOURCE_GROUP_UAT }}
+        template: ./main.bicep
+        parameters: >
+          ./parameters/uat.bicepparam 
+          slackWebhookUrl=${{ secrets.SLACKWEBHOOKURL }}
+          adminLogin=${{ secrets.SQL_ADMIN_LOGIN }}
+          adminLoginPass=${{ secrets.SQL_ADMIN_PASSWORD }}
+        deploymentName: ${{ env.USER_ALIAS }}-uat
 
 
-  # deploy-prod:
-  #   if: (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main') || (github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   environment:
-  #     name: 'PROD'
+  deploy-prod:
+    # if: (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main') || (github.ref == 'refs/heads/main') || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'PROD'
 
-  #   steps:
+    steps:
 
-  #     # Checkout code
-  #   - uses: actions/checkout@main
+      # Checkout code
+    - uses: actions/checkout@main
   
-  #   - name: Download Bicep build artifact
-  #     uses: actions/download-artifact@v3
-  #     with:
-  #         name: bicep-build
+    - name: Download Bicep build artifact
+      uses: actions/download-artifact@v3
+      with:
+          name: bicep-build
     
-  #     # Log into Azure
-  #   - uses: azure/login@v2
-  #     with:
-  #       creds: ${{ secrets.AZURE_CREDENTIALS }}
+      # Log into Azure
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-  #     # Deploy Bicep file
-  #   - name: Deploy PROD
-  #     uses: azure/arm-deploy@v2
-  #     with:
-  #       subscriptionId: ${{ env.SUBSCRIPTION_ID_PROD }}
-  #       resourceGroupName: ${{ env.RESOURCE_GROUP_PROD }}
-  #       template: ./main.bicep
-  #       parameters: >
-  #           ./parameters/uat.bicepparam 
-  #           slackWebhookUrl=${{ secrets.SLACKWEBHOOKURL }}
-  #           adminLogin=${{ secrets.SQL_ADMIN_LOGIN }}
-  #           adminLoginPass=${{ secrets.SQL_ADMIN_PASSWORD }}
-  #       deploymentName: ${{ env.USER_ALIAS }}-prod
+      # Deploy Bicep file
+    - name: Deploy PROD
+      uses: azure/arm-deploy@v2
+      with:
+        subscriptionId: ${{ env.SUBSCRIPTION_ID_PROD }}
+        resourceGroupName: ${{ env.RESOURCE_GROUP_PROD }}
+        template: ./main.bicep
+        parameters: >
+            ./parameters/uat.bicepparam 
+            slackWebhookUrl=${{ secrets.SLACKWEBHOOKURL }}
+            adminLogin=${{ secrets.SQL_ADMIN_LOGIN }}
+            adminLoginPass=${{ secrets.SQL_ADMIN_PASSWORD }}
+        deploymentName: ${{ env.USER_ALIAS }}-prod
