changed workbook stuff and slack stuff

--- a/modules/logicAppWorflowData.json
+++ b/modules/logicAppWorflowData.json
@@ -20,7 +20,7 @@
         "type": "Http",
         "inputs": {
           "method": "POST",
-          "uri": "slackWebhookUrl",
+          "uri": "@parameters('slackWebhookUrl')",
           "headers": {
             "Content-Type": "application/json"
           },
